apps/run-things/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${RUN_THINGS_NAMESPACE:-run-things}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
